# mcp-tradingagents

./: Dockerfile  Makefile  README.md  deploy.sh  jobs.py  pyproject.toml  requirements.txt  tradingagents_server.py  worker.py
.github/workflows/: ci.yml
examples/: polymarket_server.py
mcp_server/: __init__.py  app.py  auth.py  oauth_routes.py  redis_stores.py
tests/: test_oauth.py
